--- a/src/app/header/solution-menu/solution-menu.component.html
+++ b/src/app/header/solution-menu/solution-menu.component.html
@@ -6,7 +6,7 @@
 		<ion-item button lines="none"  *ngIf="isLogged ===true" [routerLink]="['/entrepreneur']" >
 			<ion-label>{{'LANDINGPAGE.GarageAccess' | translate}}</ion-label>
 		</ion-item>
-		<ion-item button  lines="none"  [routerLink]="['/tools']" (click)="dismissSolutionMenuPoverer()">
+		<ion-item button  lines="none"  [routerLink]="['intl/fr/tools']" (click)="dismissSolutionMenuPoverer()">
 			<ion-label>{{'LANDINGPAGE.Icon2SubTitle' | translate}}</ion-label>
 		</ion-item>
 		<ion-item button  lines="none"  href="https://www.facebook.com/entrepreneurstudiocom" target="_blank">
