--- a/src/app/project/executive/summary/popover-project-summary/popover-project-summary.component.scss
+++ b/src/app/project/executive/summary/popover-project-summary/popover-project-summary.component.scss
@@ -58,6 +58,10 @@ ion-thumbnail{
 .selectedPicture{
 	border:3px solid var(--ion-color-primary);
 }
+.backgroundPicturesWrapper{
+	width:100%;
+	text-align: left;
+}
 .backgroundPictures{
 	max-width:280px;
 }
