--- a/src/app/user-avatar/popover/popover.component.html
+++ b/src/app/user-avatar/popover/popover.component.html
@@ -6,7 +6,7 @@
 		<ion-item button  lines="none"href="mailto:contact@entrepreneur-studio.com">
 			<ion-label>{{'COMMON.ContactUs' | translate}}</ion-label>
 		</ion-item>
-		<ion-item button  [routerLink]="['/cgu']">
+		<ion-item button  [routerLink]="['/intl/fr/cgu']">
 			<ion-label>{{'COMMON.CGU' | translate}}</ion-label>
 		</ion-item>
 		<ion-item button (click)="presentPartnersPopover()" >
