--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -432,3 +432,25 @@ span:after {
 	background: var(--ion-color-light);
 
 }
+ion-footer {
+	padding-top:30px;
+	padding-bottom:30px;
+	background: var(--ion-color-primary-tint);
+	color: var(--ion-color-primary-contrast);
+	a{
+		color: var(--ion-color-primary-contrast) !important;
+
+	}
+	.socialNetworkIcon{
+		color: var(--ion-color-dark-contrast);
+		font-size: 	1.5em;
+	}
+	ion-grid{
+		max-width:1000px;
+		margin-left: auto;
+		margin-right: 	auto;
+	}
+	ion-col{
+		min-width:300px;
+	}
+}
