--- a/src/app/project/executive/summary/popover-business-canvas-element/popover-business-canvas-element.component.html
+++ b/src/app/project/executive/summary/popover-business-canvas-element/popover-business-canvas-element.component.html
@@ -2,20 +2,18 @@
 	<ion-item lines="none">
 		<ion-icon color="primary" slot="end" name="close-outline" class="pointer" (click)="dismiss()"></ion-icon>
 	</ion-item>
-	<ion-text>{{item.text}}</ion-text>
+	<h2><ion-text>{{title}}#{{index}}</ion-text></h2>
 	<ion-grid>
 		<ion-row>
-			<ion-col size="8">
-				<ion-text>
-					<ion-input name="text" class="input biggerFont" [(ngModel)]="item.text"></ion-input>
-				</ion-text>
+			<ion-col class="inputs">
+				<ion-textarea name="text" class="input" [(ngModel)]="item.text"></ion-textarea>
 				<ion-text><h2><ion-icon name="reorder-four-outline" class="ion-margin-end"></ion-icon>More details</h2></ion-text>
-				<ion-item class="ion-margin-top">
-					<ion-textarea class="input" [(ngModel)]="item.description"> </ion-textarea>
-				</ion-item>
+				
+				<ion-textarea class="input" [(ngModel)]="item.description"> </ion-textarea>
+				
 			</ion-col>
-			<ion-col class="ion-margin-start ion-padding actionColumn" size="2">
-				<h3>Actions</h3>
+			<ion-col class="ion-margin-start ion-padding actionColumn" >
+				<h2>Actions</h2>
 				<ion-button  size="small"  (click)="saveItem()" fill="outline">{{'PROJECT_SUMMARY.SaveItem' | translate }}</ion-button>
 				<ion-button  size="small" (click)="deleteItem()" fill="outline">{{'PROJECT_SUMMARY.DeleteItem' | translate }}</ion-button>
 			</ion-col>
