--- a/src/app/project/executive/team/team.page.html
+++ b/src/app/project/executive/team/team.page.html
@@ -31,39 +31,43 @@
 							<ion-item>
 								<ion-select [interfaceOptions]="customAlertOptions"
 								*ngIf="accessRights.write ===true"  placeholder="{{'TEAM.TeamMember.Role' | translate }}" [(ngModel)] ="teamMember.role"  (ionChange)="updateProfile(teamMember)" class="fullWidth selectStyle">
-									<ion-select-option *ngFor="let item of roleItems" [value]="item.index">{{item.text}}</ion-select-option>
-								</ion-select>
-								<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.role}}</ion-text>
-							</ion-item>
-							<ion-item>
-								<ion-select [interfaceOptions]="customAlertOptions" 
-								 *ngIf="accessRights.write ===true" placeholder="{{'TEAM.TeamMember.Profile' | translate }}" [(ngModel)] ="teamMember.projectProfile" (ionChange)="updateProfile(teamMember)"  multiple="true"  class="fullWidth selectStyle">
+								<ion-select-option *ngFor="let item of roleItems" [value]="item.index">{{item.text}}</ion-select-option>
+							</ion-select>
+							<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.role}}</ion-text>
+						</ion-item>
+						<ion-item>
+							<ion-select [interfaceOptions]="customAlertOptions" 
+							*ngIf="accessRights.write ===true" placeholder="{{'TEAM.TeamMember.Profile' | translate }}" [(ngModel)] ="teamMember.projectProfile" (ionChange)="updateProfile(teamMember)"  multiple="true"  class="fullWidth selectStyle">
 
-									<ion-select-option  *ngFor="let item of projectProfilesItems" [value]="item.index">{{item.text}}</ion-select-option>
-								</ion-select>
-								<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.projectProfile}}</ion-text>
-							</ion-item>
-							<ion-item >
-								<ion-label position="floating">{{'TEAM.TeamMember.Mission' | translate }}</ion-label>
-								<ion-textarea *ngIf="accessRights.write ===true"  [(ngModel)] ="teamMember.mission" class="fullWidth" (ionChange)="updateProfile(teamMember)"></ion-textarea>
-								<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.mission}}</ion-text>
-							</ion-item>
+							<ion-select-option  *ngFor="let item of projectProfilesItems" [value]="item.index">{{item.text}}</ion-select-option>
+						</ion-select>
+						<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.projectProfile}}</ion-text>
+					</ion-item>
+					<ion-item *ngIf="accessRights.write ===true">
 
-							<ion-item lines="none"  *ngIf="accessRights.write ===true">		
-								<ion-button (click)="removeTeamMember(teamMember) "  *ngIf="uid !== teamMember.uid">{{'TEAM.Remove' | translate }}</ion-button>
-							</ion-item>
-						</ion-card-content>
-					</ion-card>
-				</ion-col>
+						<ion-textarea  [(ngModel)] ="teamMember.mission" class="fullWidth" (ionChange)="updateProfile(teamMember)"></ion-textarea>
 
-				<ion-col *ngIf="accessRights.write ===true">
-					<ion-card class="teamMember teamMemberAdd" (click)="requestNewMember()">
-						<ion-card-content>
-							<ion-icon name="add-outline" color="primary"  class="addButton"></ion-icon>
-							<h2>{{'TEAM.SendInviteText' | translate }}</h2>
-						</ion-card-content>
-					</ion-card>
-				</ion-col>
-			</ion-row>
-		</ion-grid>
-	</ion-content>
+					</ion-item>
+					<ion-item *ngIf="accessRights.write ===false">
+						<ion-label><p >{{'TEAM.TeamMember.Mission' | translate }}</p>
+						<p ><ion-text   class="ion-text-wrap">{{teamMember.mission}}</ion-text></p>
+					</ion-label>
+					</ion-item>
+					<ion-item lines="none"  *ngIf="accessRights.write ===true">		
+						<ion-button (click)="removeTeamMember(teamMember) "  *ngIf="uid !== teamMember.uid">{{'TEAM.Remove' | translate }}</ion-button>
+					</ion-item>
+				</ion-card-content>
+			</ion-card>
+		</ion-col>
+
+		<ion-col *ngIf="accessRights.write ===true">
+			<ion-card class="teamMember teamMemberAdd" (click)="requestNewMember()">
+				<ion-card-content>
+					<ion-icon name="add-outline" color="primary"  class="addButton"></ion-icon>
+					<h2>{{'TEAM.SendInviteText' | translate }}</h2>
+				</ion-card-content>
+			</ion-card>
+		</ion-col>
+	</ion-row>
+</ion-grid>
+</ion-content>
