--- a/src/app/question/question.page.html
+++ b/src/app/question/question.page.html
@@ -12,6 +12,27 @@
 			<ion-text class="ion-text-center  title" ><h3 class="ion-text-center ">{{'FEEDBACK.SubTitle' | translate}}</h3></ion-text>
 			<ion-text class="ion-text-center  title" ><h3 class="ion-text-center ">{{'FEEDBACK.SubTitle2' | translate}}</h3></ion-text>
 		</div>
+		<div class="linkToRoadmap ion-padding"  *ngIf="isLogged ===true">
+			<div class="">
+				
+				<p>
+					<ion-icon name="trail-sign-outline" color="primary" size="large" class="ion-margin-end"></ion-icon>
+					<span>{{'FEEDBACK.RoadmapText1' | translate}} <a href="https://trello.com/b/eJa4pS6s/entrepreneur-studio-roadmap" target="_blank">{{'FEEDBACK.RoadmapText2' | translate}}</a>
+					{{'FEEDBACK.RoadmapText3' | translate}}</span>
+				</p>
+			</div> 
+		</div>
+		<div class="linkToRoadmap ion-padding"  *ngIf="isLogged ===false">
+			<div class="">
+				
+				<p>
+					<ion-icon name="trail-sign-outline" color="primary" size="large" class="ion-margin-end"></ion-icon>
+					<span>{{'FEEDBACK.RoadmapText4' | translate}} <a (click)="presentLoginPopover()">{{'FEEDBACK.RoadmapText5' | translate}}</a>
+					{{'FEEDBACK.RoadmapText6' | translate}}  <a (click)="presentSignUpPopover()">{{'FEEDBACK.RoadmapText7' | translate}}</a> 
+				</span>
+				</p>
+			</div> 
+		</div> 
 		<ion-item>
 			<ion-label color="primary" position="floating">{{'FEEDBACK.TypeTitle' | translate}}</ion-label>
 			<ion-select interface="action-sheet" [(ngModel)] ="feedback.type" >
@@ -28,6 +49,6 @@
 		<div class="ion-margin-top ion-margin-bottom ion-text-center">
 			<ion-button color="primary" (click)="send()">
 				<ion-icon name="paper-plane-outline" class="ion-margin-end"></ion-icon>{{'FEEDBACK.Send' | translate}}</ion-button>
+			</div>
 		</div>
-	</div>
-</ion-content>
+	</ion-content>
