--- a/src/app/question/question.page.scss
+++ b/src/app/question/question.page.scss
@@ -26,3 +26,13 @@
 	margin-left:auto;
 	margin-right:auto;
 }
+
+.linkToRoadmap{
+	border: 2px solid var(--ion-color-primary);
+	border-radius: 4px;
+	margin-top: 40px;
+	span{
+		position:relative;
+		top:-9px;
+	}
+}
