--- a/src/app/tools/tools.page.scss
+++ b/src/app/tools/tools.page.scss
@@ -154,6 +154,14 @@ ion-searchbar{
 	.loadingCol{
 		padding-top:30px;
 	}	
+	.likeButton{
+		position:absolute;	
+		top:3px;
+		right:3px;
+		ion-icon{
+			margin-right: 12px;
+		}
+	}
 }
 
 .header{
@@ -211,20 +219,39 @@ ion-searchbar{
 	width:30px;
 }
 
-.shareFabButton{
-	margin-top:12px;
-	z-index:2;
-	@media(max-width: 800px) {
-		margin-top:-8px;
-		margin-right:-8px;
-
-	}
+.shareButton{
+	position:absolute;	
+	right:3px;
 }
 ion-fab-button{
+
 	@media(max-width: 800px) {
 		width:20px;
 		height:20px;
 		--background: var(--ion-color-primary);
 		--color	: var(--ion-color-primary);
 	}
+}
+
+.thumbIcon{
+	margin-right:6px;
+}
+
+.likes{
+	margin:0px;
+	ion-icon{
+		background: var(--ion-color-primary);
+		--color	: var(--ion-color-primary-contrast);
+		color: var(--ion-color-primary-contrast);
+		border-radius: 	50%;
+		padding:6px;
+		margin-right: 5px;
+	}
+	span{
+		position:relative;
+		top:-7px;
+	}
+}
+.sharePopoverComponent{
+	--width: auto;
 }
