--- a/src/app/project/executive/summary/popover-feedback/popover-feedback.component.html
+++ b/src/app/project/executive/summary/popover-feedback/popover-feedback.component.html
@@ -10,6 +10,13 @@
 		<div class="header ion-padding ">
 			<ion-text class="ion-text-center  title" ><h1>{{'FEEDBACK.TitleExpectations' | translate}}</h1></ion-text>
 		</div>
+		<div class="linkToRoadmap ion-padding ion-margin">
+			<p>
+				<ion-icon name="trail-sign-outline" color="primary" size="large" class="ion-margin-end"></ion-icon>
+				<span>{{'FEEDBACK.RoadmapText1' | translate}} <a href="https://trello.com/b/eJa4pS6s/entrepreneur-studio-roadmap" target="_blank">{{'FEEDBACK.RoadmapText2' | translate}}</a>
+				{{'FEEDBACK.RoadmapText3' | translate}}</span>
+			</p>
+		</div>
 		
 		<ion-item>
 			<ion-textarea  type="text" [(ngModel)] ="feedback.text" placeholder="{{'FEEDBACK.TextExpectationsPlaceholder' | translate}}">
@@ -18,6 +25,6 @@
 		<div class="ion-margin-top ion-margin-bottom ion-text-center">
 			<ion-button color="primary" (click)="sendFeedback()">
 				<ion-icon name="paper-plane-outline" class="ion-margin-end"></ion-icon>{{'FEEDBACK.Send' | translate}}</ion-button>
+			</div>
 		</div>
-	</div>
-</ion-content>
+	</ion-content>
