--- a/src/app/project/executive/summary/popover-feedback/popover-feedback.component.scss
+++ b/src/app/project/executive/summary/popover-feedback/popover-feedback.component.scss
@@ -20,3 +20,13 @@
 
 	}
 }
+
+.linkToRoadmap{
+	border: 2px solid var(--ion-color-primary);
+	border-radius: 4px;
+	margin-top: 40px;
+	span{
+		position:relative;
+		top:-9px;
+	}
+}
