--- a/src/app/project/executive/resources/resource-popover/resource-popover.component.html
+++ b/src/app/project/executive/resources/resource-popover/resource-popover.component.html
@@ -62,12 +62,36 @@
 		<ion-slide  >
 
 			<div class="wrapper ion-text-center">
+				<div *ngIf="selectedApplication.name ==='Slack'" class="installation">
+					<ion-grid >
+						<ion-row>
+							<ion-col class="installationAppGeneral">
+								<div class="logoWrapper"  [ngStyle]="{'background-image': 'url(' + selectedApplication.imgUrl + ')'}">
+								</div>
+								<h1>Categories</h1>
+								<div class="ion-justify-content-start labels">
 
-				<p class="informationBox ion-padding ion-text-left ion-margin">{{'RESOURCES.AddResourceUrlText' | translate}} {{selectedApplication.name}} </p>
-				<ion-item >
-					<ion-input type="url" [placeholder]="selectedApplication.link" class="ion-padding-start" clearInput="true" value="clear me" [(ngModel)]="selectedApplicationUrl"> </ion-input>
-				</ion-item>
-				<ion-button class="ion-margin-top" (click)="updateResource()" [disabled]="selectedApplicationUrl ==='' || selectedApplicationUrl === null">{{'RESOURCES.AddResourceOKButton' | translate}} </ion-button>
+									<div  *ngFor="let label of selectedApplication.labels " class="ion-align-self-start label">
+										<ion-text class="ion-text-uppercase">{{'TOOLS.CATEGORIES.'+label.label | translate}}  </ion-text>
+									</div>
+								</div>
+							</ion-col>
+							<ion-col>
+								<p class="installationSteps ion-padding" [innerHTML]="selectedApplication.installationSteps"></p>
+								<a [href]="slackButtonHref" (click)="addApplicationSlack()"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</div>
+
+				<div *ngIf="selectedApplication.name !=='Slack'">
+					<p class="informationBox ion-padding ion-text-left ion-margin">{{'RESOURCES.AddResourceUrlText' | translate}} {{selectedApplication.name}} </p>
+					<ion-item >
+						<ion-input type="url" [placeholder]="selectedApplication.link" class="ion-padding-start" clearInput="true" value="clear me" [(ngModel)]="selectedApplicationUrl"> </ion-input>
+					</ion-item>
+					<ion-button class="ion-margin-top" (click)="updateResource()" [disabled]="selectedApplicationUrl ==='' || selectedApplicationUrl === null">{{'RESOURCES.AddResourceOKButton' | translate}} </ion-button>
+				</div>
+
 			</div>
 		</ion-slide>
 	</ion-slides>
